<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">base</string>
    <string name="grantPermission">分配权限</string>
    <string name="send_key">发送钥匙</string>
    <string name="mine_limitTime">限时</string>
    <string name="mine_forever">永久</string>
    <string name="mine_once">单次</string>
    <string name="mine_loop">循环</string>
    <string name="send">发送</string>
    <string name="setGrantUser">设置为授权用户</string>
    <string name="invalidTime">失效时间</string>
    <string name="chooseTime">请选择时间</string>
    <string name="validTime">生效时间</string>
    <string name="lock_key_vaild_time">有效时间</string>
    <string name="repeat">重复</string>
    <string name="startDate">启用日期</string>
    <string name="endDate">停止日期</string>
    <string name="onceKeyTip">注:单次钥匙有效期为1小时,使用1次后失效</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="receiver">接收者</string>
    <string name="name">名称</string>
    <string name="nameKey">请为钥匙命名</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="checkAll">全选</string>
    <string name="loading">加载中...</string>
    <string name="serviceErr">服务器开小差</string>
    <string name="base_auto_login_time_out">您的账号于##在异地登录，如非本人，请尽快修改密码。</string>
    <string name="mine_version_update_title">云锁App版本更新</string>
    <string name="mine_version_update_waiting">正在等待...</string>
    <string name="mine_version_update_has_downloaded">已下载</string>
    <string name="mine_version_update_install">下载完成，点击安装</string>
    <string name="mine_version_update_tips">发现有新的版本，需要升级吗？</string>
    <string name="mine_version_update_comfirm">升级</string>
    <string name="mine_version_update_toast">开始下载...</string>
    <string name="mine_version_update_dont">暂时不需要</string>
    <string name="mine_version_update_is_newest_version">已是最新版本</string>
    <string name="fine">好的</string>
    <string name="base_no_data">暂无数据</string>
    <string name="base_kongkongruye">本页面数据空空如也</string>
    <string name="base_safe_verify_tips1">为了您的账号安全，请获取验证码进行身份验证</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="base_safe_verify">安全验证</string>
    <string name="waiting">等待</string>
    <string name="send_key_phone_hint">请输入接收者手机号</string>
    <string name="lock_send_key_failed_tips_one">钥匙只能发送给已注册手机号</string>
    <string name="lock_send_key_date_error_tips">停止日期不能早于启用日期</string>
    <string name="lock_send_key_time_error_tips">失效时间不能早于生效时间</string>
    <string name="base_no_network">暂无网络</string>
    <string name="base_network_retry">请检查网络后下拉页面刷新</string>
    <string name="lock_contact_request_tips">APP需要你的允许获取联系人权限</string>
    <string name="lock_setting">设置</string>
    <string name="base_over_data_login">自动登录已过期，请重新登陆。</string>
    <string name="sending">发送中</string>
    <string name="base_loading">正在加载..</string>
    <string name="base_waiting">请稍候...</string>
    <string name="base_loading_5_par">正在加载.. 5%</string>
    <string name="base_connect_over_time">网络连接超时</string>
    <string name="base_network_connect_fail">操作失败，请检查网络连接</string>
    <string name="base_download_fail">下载失败</string>
    <string name="base_input_revicer_number">请输入接收者手机号</string>
</resources>
