<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/sunday"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/select_weekend"
        android:button="@null"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/sunday"
        android:textColor="@drawable/select_weekend_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/monday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1256" />

    <CheckBox
        android:id="@+id/monday"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.1256"
        android:background="@drawable/select_week"
        android:button="@null"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/monday"
        android:textColor="@drawable/select_week_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tuesday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sunday"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/tuesday"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.1256"
        android:background="@drawable/select_week"
        android:button="@null"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/tuesday"
        android:textColor="@drawable/select_week_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wednesday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/monday"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/wednesday"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.1256"
        android:background="@drawable/select_week"
        android:button="@null"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/wednesday"
        android:textColor="@drawable/select_week_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/thursday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tuesday"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/thursday"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.1256"
        android:background="@drawable/select_week"
        android:button="@null"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/thursday"
        android:textColor="@drawable/select_week_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/friday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wednesday"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/friday"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.1256"
        android:background="@drawable/select_week"
        android:button="@null"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/friday"
        android:textColor="@drawable/select_week_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saturday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thursday"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/saturday"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.1256"
        android:background="@drawable/select_weekend"
        android:button="@null"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/saturday"
        android:textColor="@drawable/select_weekend_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/friday"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>