<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/headContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_head"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.131"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.458"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/grantPermission"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/m" />
            </android.support.v7.widget.Toolbar>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar5">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#80DEE6"
                    android:layout_gravity="bottom"/>

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:tabIndicatorColor="@android:color/white"
                    app:tabIndicatorHeight="3dp"
                    app:tabTextAppearance="@style/tabStyle"
                    app:tabTextColor="@android:color/white">

                    <android.support.design.widget.TabItem
                        android:id="@+id/tabItem5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_limitTime" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/tabItem6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_forever" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/tabItem7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_once" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/tabItem8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_loop" />
                </android.support.design.widget.TabLayout>
            </FrameLayout>


        </android.support.constraint.ConstraintLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/sendKey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headContainer">

        </android.support.v4.view.ViewPager>

        <Button
            android:id="@+id/sendKey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_bt"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="@dimen/m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>
</layout>