<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="@dimen/base_52dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/base_16dp"
        android:text="@string/receiver"
        android:textColor="@color/gray6"
        android:textSize="@dimen/s"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_phoneNum"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/base_60dp"
        android:layout_marginEnd="@dimen/base_16dp"
        android:background="@null"
        android:ems="11"
        android:minWidth="@dimen/base_160dp"
        android:gravity="right|center_vertical"
        android:hint="@string/base_input_revicer_number"
        android:inputType="phone"
        android:maxLength="11"
        android:textColorHint="@color/grayC"
        android:textSize="@dimen/s"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/contact"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_bottom"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/base_16dp"
        android:text="@string/name"
        android:textColor="@color/gray6"
        android:textSize="@dimen/s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView14" />

    <EditText
        android:id="@+id/et_receiverName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/base_60dp"
        android:background="@null"
        android:maxLength="20"
        android:minWidth="@dimen/base_160dp"
        android:maxLines="1"
        android:inputType="text"
        android:gravity="right|center_vertical"
        android:hint="@string/nameKey"
        android:textColorHint="@color/grayC"
        android:textSize="@dimen/s"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="@+id/et_phoneNum" />

    <ImageView
        android:id="@+id/contact"
        android:layout_width="@dimen/base_27dp"
        android:layout_height="@dimen/base_27dp"
        android:layout_marginEnd="@dimen/base_16dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_phoneNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_phoneNum"
        app:srcCompat="@drawable/address_book" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/base_16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>